# chess-openings-ai

./: pyproject.toml
chess_openings_ai/: .gitignore
chess_openings_ai/src/: main.py
chess_openings_ai/src/rag_pipeline/: document_loader.py  embeddings.py  pipeline.py  vector_store.py
src/: main.py
